<resources>
    <string name="app_name">ConstructionManager</string>
    <!-- Strings used for fragments for navigation -->
    <string name="addFlaw">Add new flaw</string>
    <string name="addImage">Add new floor plan</string>
    <string name="save">Save</string>
    <string name="room">Room</string>
    <string name="apartment">Apartment</string>
    <string name="flaw">Flaw</string>
    <string name="title_flaw_dialog">Edit information</string>
    <string name="button_add_flaw">Add flaw</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_empty">Field can\'t be empty</string>
    <string name="message_saved">Image saved!</string>
    <string name="message_error_saving">There was an error saving the image</string>
    <string name="permission_explanation">To load and save images, the app requires permission to use external storage</string>
    <string name="header_number">Number</string>
    <string name="message_csv_saved">Table saved as CSV</string>
    <string name="message_error_savingCSV">There was an error saving the csv-file</string>
    <string name="OK">OK</string>
    <string name="title_info_dialog">Flaw info</string>
    <string name="edit">Edit</string>
    <string name="ret">Return</string>
    <string name="version">v.0.2.2</string>
    <string name="sep">,</string>
    <string name="saveas">Save as</string>
    <string name="saveimageas">Save image and flaws as</string>
    <string name="info">More info about app</string>
    <string name="saveLocation">Save location</string>
    <string name="back">Back</string>
    <string name="error">Error</string>
    <string name="noChanges">No changes made. Not saving.</string>
    <string name="dir_error">Error when creating new direcotry for app files</string>
    <string name="projectSaved">Project saved succesfully</string>
    <string name="projectSaveError">There was an error saving the project</string>
    <string name="saveAsProject">Save Project as</string>
    <string name="loadProject">Load Project</string>
    <string name="projectLoadError">There was an error loading the project file</string>
    <string name="ClassNotFound">Class not found</string>
    <string name="chooseSave">Choose savefile</string>
    <string name="load">Load</string>
    <string name="noSelectedFile">Select a file</string>
    <string name="saveprojectas">Save project as</string>
    <string name="areyousure">Are you sure you want to continue?</string>
    <string name="unsavedChanges">You have unsave changes.</string>
    <string name="cont">Continue</string>
    <string name="saveProject">Save project</string>
    <string name="saveImage">Save output</string>
    <string name="closingWarning">Are you sure you want to exit the application?</string>
    <string name="yes">Yes</string>
    <string name="del">Delete</string>
    <string name="confirmDelete">Are you sure you want to delete this item?</string>
    <string name="newProject">New project</string>
    <string name="gallery">Gallery</string>
    <string name="document">Document</string>
    <string name="createNewProject">Create a new project</string>
    <string name="create">Create</string>
    <string name="fileNotFound">File not found</string>
    <string name="selectPage">Select page number</string>
    <string name="pdf">PDF</string>
    <string name="pdfFail">PDF rendering failed</string>
    <string name="noPermission">No permission to use external storage</string>
    <string name="fileExists">File already exists. Do you want to continue?</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="enterProperties">Enter the properties you want in your project</string>
    <string name="properties">Properties</string>
</resources>