<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addFlawGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:columnCount="1"
    android:focusable="true"

    android:focusableInTouchMode="true"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingBottom="@dimen/fab_margin"
    android:scrollbars="vertical"
    android:useDefaultMargins="true"
    android:windowSoftInputMode="stateHidden">

    <TextView
        android:id="@+id/apartmentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_gravity="start"
        android:text="@string/apartment" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apartmentTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/roomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_gravity="start"
        android:text="@string/room" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/roomTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/roomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/flawTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_gravity="start"
        android:text="@string/flaw" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/flawTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

</GridLayout>